[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI/ui_panel_item_button.png" type="Texture" id=1]
[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui_themes/fonts/small_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/order-fulfillment/OrderSlot.gd" type="Script" id=4]

[node name="OrderSlot" type="NinePatchRect"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 2 )
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subject" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = 28.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubjectLabel" type="Label" parent="Subject"]
margin_right = 60.0
margin_bottom = 28.0
text = "SUBJ:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Subject"]
margin_left = 64.0
margin_right = 267.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
text = "A STICKY SITUATION"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="From" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -28.0
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FromLabel" type="Label" parent="From"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 3 )
text = "FROM:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistributerLabel" type="Label" parent="From"]
margin_left = 64.0
margin_top = 1.0
margin_right = 267.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Flor-Mart inc."
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_OrderSlot_gui_input"]
